best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -66,6 +66,10 @@
 <li>窗体无法改变大小</li>
 </ul></li>
 </ul>
+
+<p>
+详情见课本第 22 页。
+</p>
 </div>
 </div>
 
@@ -373,7 +377,7 @@
 </p>
 
 
-<figure id="org69d1926">
+<figure id="orgd8f424f">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
