--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-03 -->
+<!-- 2024-04-07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -20,35 +20,35 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgcecfe29">1. 笔记</a>
+<li><a href="#org14cbbae">1. 笔记</a>
 <ul>
-<li><a href="#org14d735d">1.1. 2024-04-03 09:26:26</a></li>
-<li><a href="#org25d14b5">1.2. 2024-04-02 10:54:48</a></li>
-<li><a href="#org30b5844">1.3. 2024-03-27 08:28:29</a></li>
-<li><a href="#org2e51549">1.4. 2024-03-26 10:36:40</a></li>
-<li><a href="#org7ebc4f2">1.5. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.6. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.7. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.8. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.9. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.10. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.11. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.12. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.13. 2023-09-06 (任务)</a></li>
+<li><a href="#org7bd31d0">1.1. 2024-04-03 09:26:26</a></li>
+<li><a href="#orgb21e0df">1.2. 2024-04-02 10:54:48</a></li>
+<li><a href="#org960d2d4">1.3. 2024-03-27 08:28:29</a></li>
+<li><a href="#org65ef832">1.4. 2024-03-26 10:36:40</a></li>
+<li><a href="#org15cd11e">1.5. 2024-03-20 14:58:37</a></li>
+<li><a href="#orgc0d31c6">1.6. 2024-03-19 10:49:19</a></li>
+<li><a href="#orga8e0244">1.7. 2024-03-13 08:31:23</a></li>
+<li><a href="#orga1eb4bf">1.8. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgecfcac9">1.9. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgeb88a8f">1.10. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orga9d61a9">1.11. 2023-12-26 (任务)</a></li>
+<li><a href="#orgd131c27">1.12. 2023-10-31 (任务)</a></li>
+<li><a href="#org102f0d0">1.13. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org7ac10f0">2. 练习题</a>
+<li><a href="#orge8a1c10">2. 练习题</a>
 <ul>
-<li><a href="#orgdf99604">2.1. Winform练习题</a></li>
-<li><a href="#org4d18255">2.2. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org2f34c82">2.1. Winform练习题</a></li>
+<li><a href="#orgadb09f2">2.2. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
-<li><a href="#org47c88af">3. 知识点</a>
+<li><a href="#org7755aae">3. 知识点</a>
 <ul>
-<li><a href="#org2d01e22">3.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#org7ef12f3">3.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#org366482f">4. 任务结果</a></li>
+<li><a href="#orgf8eb699">4. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -58,12 +58,12 @@
 </ul>
 
 
-<section id="outline-container-orgcecfe29" class="outline-2">
-<h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org14cbbae" class="outline-2">
+<h2 id="org14cbbae"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org14d735d" class="outline-3">
-<h3 id="org14d735d"><span class="section-number-3">1.1.</span> 2024-04-03 09:26:26</h3>
+<div id="outline-container-org7bd31d0" class="outline-3">
+<h3 id="org7bd31d0"><span class="section-number-3">1.1.</span> 2024-04-03 09:26:26</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 关于跳动的心，需要掌握:
@@ -85,8 +85,8 @@
 </div>
 </div>
 
-<div id="outline-container-org25d14b5" class="outline-3">
-<h3 id="org25d14b5"><span class="section-number-3">1.2.</span> 2024-04-02 10:54:48</h3>
+<div id="outline-container-orgb21e0df" class="outline-3">
+<h3 id="orgb21e0df"><span class="section-number-3">1.2.</span> 2024-04-02 10:54:48</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Tips:
@@ -102,8 +102,8 @@ DataTable.Compute
 </div>
 </div>
 
-<div id="outline-container-org30b5844" class="outline-3">
-<h3 id="org30b5844"><span class="section-number-3">1.3.</span> 2024-03-27 08:28:29</h3>
+<div id="outline-container-org960d2d4" class="outline-3">
+<h3 id="org960d2d4"><span class="section-number-3">1.3.</span> 2024-03-27 08:28:29</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>练习上次的内容，搞会</li>
@@ -113,8 +113,8 @@ DataTable.Compute
 </div>
 </div>
 
-<div id="outline-container-org2e51549" class="outline-3">
-<h3 id="org2e51549"><span class="section-number-3">1.4.</span> 2024-03-26 10:36:40</h3>
+<div id="outline-container-org65ef832" class="outline-3">
+<h3 id="org65ef832"><span class="section-number-3">1.4.</span> 2024-03-26 10:36:40</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 组件、控件、Control，在 C# 中，实际就是一个类的实例。
@@ -170,8 +170,8 @@ DataTable.Compute
 </div>
 </div>
 
-<div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.5.</span> 2024-03-20 14:58:37</h3>
+<div id="outline-container-org15cd11e" class="outline-3">
+<h3 id="org15cd11e"><span class="section-number-3">1.5.</span> 2024-03-20 14:58:37</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 一个小挑战。
@@ -189,8 +189,8 @@ DataTable.Compute
 </div>
 </div>
 
-<div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.6.</span> 2024-03-19 10:49:19</h3>
+<div id="outline-container-orgc0d31c6" class="outline-3">
+<h3 id="orgc0d31c6"><span class="section-number-3">1.6.</span> 2024-03-19 10:49:19</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
@@ -282,8 +282,8 @@ DataTable.Compute
 </div>
 </div>
 
-<div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.7.</span> 2024-03-13 08:31:23</h3>
+<div id="outline-container-orga8e0244" class="outline-3">
+<h3 id="orga8e0244"><span class="section-number-3">1.7.</span> 2024-03-13 08:31:23</h3>
 <div class="outline-text-3" id="text-1-7">
 <p>
 上课了
@@ -397,8 +397,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 </div>
 
-<div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.8.</span> 2024-03-12 11:07:40</h3>
+<div id="outline-container-orga1eb4bf" class="outline-3">
+<h3 id="orga1eb4bf"><span class="section-number-3">1.8.</span> 2024-03-12 11:07:40</h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
@@ -414,8 +414,8 @@ string abc = Console.ReadLine();
 </div>
 </div>
 
-<div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.9.</span> 2024-01-16 (寒假作业)</h3>
+<div id="outline-container-orgecfcac9" class="outline-3">
+<h3 id="orgecfcac9"><span class="section-number-3">1.9.</span> 2024-01-16 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 C/S架构编程，做完第一章所有的上机题:
@@ -427,8 +427,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.10.</span> 2024-01-16 (期末成绩)</h3>
+<div id="outline-container-orgeb88a8f" class="outline-3">
+<h3 id="orgeb88a8f"><span class="section-number-3">1.10.</span> 2024-01-16 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-10">
 <table>
 
@@ -848,8 +848,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.11.</span> 2023-12-26 (任务)</h3>
+<div id="outline-container-orga9d61a9" class="outline-3">
+<h3 id="orga9d61a9"><span class="section-number-3">1.11.</span> 2023-12-26 (任务)</h3>
 <div class="outline-text-3" id="text-1-11">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
@@ -857,8 +857,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.12.</span> 2023-10-31 (任务)</h3>
+<div id="outline-container-orgd131c27" class="outline-3">
+<h3 id="orgd131c27"><span class="section-number-3">1.12.</span> 2023-10-31 (任务)</h3>
 <div class="outline-text-3" id="text-1-12">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
@@ -866,8 +866,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.13.</span> 2023-09-06 (任务)</h3>
+<div id="outline-container-org102f0d0" class="outline-3">
+<h3 id="org102f0d0"><span class="section-number-3">1.13.</span> 2023-09-06 (任务)</h3>
 <div class="outline-text-3" id="text-1-13">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
@@ -877,12 +877,12 @@ C/S架构编程，做完第一章所有的上机题:
 </section>
 
 
-<section id="outline-container-org7ac10f0" class="outline-2">
-<h2 id="org7ac10f0"><span class="section-number-2">2.</span> 练习题</h2>
+<section id="outline-container-orge8a1c10" class="outline-2">
+<h2 id="orge8a1c10"><span class="section-number-2">2.</span> 练习题</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgdf99604" class="outline-3">
-<h3 id="orgdf99604"><span class="section-number-3">2.1.</span> Winform练习题</h3>
+<div id="outline-container-org2f34c82" class="outline-3">
+<h3 id="org2f34c82"><span class="section-number-3">2.1.</span> Winform练习题</h3>
 <div class="outline-text-3" id="text-2-1">
 <ol class="org-ol">
 <li>创建一个简单的登录窗体，包含用户名和密码的文本框，以及登录按钮。
@@ -915,8 +915,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org4d18255" class="outline-3">
-<h3 id="org4d18255"><span class="section-number-3">2.2.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div id="outline-container-orgadb09f2" class="outline-3">
+<h3 id="orgadb09f2"><span class="section-number-3">2.2.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
 <div class="outline-text-3" id="text-2-2">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">using</span> <span style="color: #00538b;">System</span>;
@@ -1083,12 +1083,12 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </section>
 
-<section id="outline-container-org47c88af" class="outline-2">
-<h2 id="org47c88af"><span class="section-number-2">3.</span> 知识点</h2>
+<section id="outline-container-org7755aae" class="outline-2">
+<h2 id="org7755aae"><span class="section-number-2">3.</span> 知识点</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org2d01e22" class="outline-3">
-<h3 id="org2d01e22"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div id="outline-container-org7ef12f3" class="outline-3">
+<h3 id="org7ef12f3"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -1167,10 +1167,10 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </section>
 
-<section id="outline-container-org366482f" class="outline-2">
-<h2 id="org366482f"><span class="section-number-2">4.</span> 任务结果</h2>
+<section id="outline-container-orgf8eb699" class="outline-2">
+<h2 id="orgf8eb699"><span class="section-number-2">4.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-4">
-<table id="org53e5988">
+<table id="org58e03b4">
 
 
 <colgroup>
@@ -1188,9 +1188,9 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-left"><a href="#org16fdc68">2023-09-06</a></th>
-<th scope="col" class="org-right"><a href="#org64a4c8c">2023-10-31</a></th>
-<th scope="col" class="org-right"><a href="#orgad105e2">2023-12-26</a></th>
+<th scope="col" class="org-left"><a href="#org102f0d0">2023-09-06</a></th>
+<th scope="col" class="org-right"><a href="#orgd131c27">2023-10-31</a></th>
+<th scope="col" class="org-right"><a href="#orga9d61a9">2023-12-26</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1544,7 +1544,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-03</p>
+<p class="date">Created: 2024-04-07</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
