--- a/191/index.html
+++ b/191/index.html
@@ -22,21 +22,22 @@
 <ul>
 <li><a href="#org851c16f">1. 笔记</a>
 <ul>
-<li><a href="#orgc9fb204">1.1. 2024-04-07 08:58:20</a></li>
-<li><a href="#orga6e1da0">1.2. 2024-04-02 09:04:27</a></li>
-<li><a href="#orgf652c49">1.3. 2024-03-29 08:38:50</a></li>
-<li><a href="#orgc8bb22a">1.4. 2024-03-26 08:29:19</a></li>
-<li><a href="#orgd1411de">1.5. 2024-03-22 08:41:13</a></li>
-<li><a href="#org734686f">1.6. 2024-03-19 09:32:31</a></li>
-<li><a href="#orge6b0bf6">1.7. 2024-03-15 14:52:53</a></li>
-<li><a href="#org5c8dc5d">1.8. 2024-03-15 08:30:49</a></li>
-<li><a href="#org7f36afa">1.9. 2024-03-12 09:46:16</a></li>
-<li><a href="#org1ae34df">1.10. 2024-03-08 08:40:26</a></li>
-<li><a href="#orgac50150">1.11. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#orgbf91dd6">1.12. 2024-01-15 (期末分数)</a></li>
-<li><a href="#orgffdf4b0">1.13. 2023-12-25 (任务)</a></li>
-<li><a href="#org24277c6">1.14. 2023-10-30 (任务)</a></li>
-<li><a href="#org92c67f3">1.15. 2023-09-11 (任务)</a></li>
+<li><a href="#orgba8fd0f">1.1. 2024-04-07 15:03:22</a></li>
+<li><a href="#orgc9fb204">1.2. 2024-04-07 08:58:20</a></li>
+<li><a href="#orga6e1da0">1.3. 2024-04-02 09:04:27</a></li>
+<li><a href="#orgf652c49">1.4. 2024-03-29 08:38:50</a></li>
+<li><a href="#orgc8bb22a">1.5. 2024-03-26 08:29:19</a></li>
+<li><a href="#orgd1411de">1.6. 2024-03-22 08:41:13</a></li>
+<li><a href="#org734686f">1.7. 2024-03-19 09:32:31</a></li>
+<li><a href="#orge6b0bf6">1.8. 2024-03-15 14:52:53</a></li>
+<li><a href="#org5c8dc5d">1.9. 2024-03-15 08:30:49</a></li>
+<li><a href="#org7f36afa">1.10. 2024-03-12 09:46:16</a></li>
+<li><a href="#org1ae34df">1.11. 2024-03-08 08:40:26</a></li>
+<li><a href="#orgac50150">1.12. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#orgbf91dd6">1.13. 2024-01-15 (期末分数)</a></li>
+<li><a href="#orgffdf4b0">1.14. 2023-12-25 (任务)</a></li>
+<li><a href="#org24277c6">1.15. 2023-10-30 (任务)</a></li>
+<li><a href="#org92c67f3">1.16. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#orge9d7293">2. 练习题</a>
@@ -71,9 +72,23 @@
 <h2 id="org851c16f"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgc9fb204" class="outline-3">
-<h3 id="orgc9fb204"><span class="section-number-3">1.1.</span> 2024-04-07 08:58:20</h3>
+<div id="outline-container-orgba8fd0f" class="outline-3">
+<h3 id="orgba8fd0f"><span class="section-number-3">1.1.</span> 2024-04-07 15:03:22</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+要做的事:
+</p>
+<ol class="org-ol">
+<li>练习前两次讲解的代码，做到无提醒情况下能将其实现出来</li>
+<li>按照课本第10页，练习登录窗体的实现</li>
+<li>完成课本上的课后题</li>
+</ol>
+</div>
+</div>
+
+<div id="outline-container-orgc9fb204" class="outline-3">
+<h3 id="orgc9fb204"><span class="section-number-3">1.2.</span> 2024-04-07 08:58:20</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 定时器的另一个例子，自由落体运动:
 </p>
@@ -138,8 +153,8 @@
 </div>
 
 <div id="outline-container-orga6e1da0" class="outline-3">
-<h3 id="orga6e1da0"><span class="section-number-3">1.2.</span> 2024-04-02 09:04:27</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orga6e1da0"><span class="section-number-3">1.3.</span> 2024-04-02 09:04:27</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 定时器:
 </p>
@@ -186,8 +201,8 @@
 </div>
 
 <div id="outline-container-orgf652c49" class="outline-3">
-<h3 id="orgf652c49"><span class="section-number-3">1.3.</span> 2024-03-29 08:38:50</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgf652c49"><span class="section-number-3">1.4.</span> 2024-03-29 08:38:50</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 事件。择机执行 (触发):
 </p>
@@ -261,8 +276,8 @@
 </div>
 
 <div id="outline-container-orgc8bb22a" class="outline-3">
-<h3 id="orgc8bb22a"><span class="section-number-3">1.4.</span> 2024-03-26 08:29:19</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="orgc8bb22a"><span class="section-number-3">1.5.</span> 2024-03-26 08:29:19</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 窗体的属性:
 </p>
@@ -287,8 +302,8 @@
 </div>
 
 <div id="outline-container-orgd1411de" class="outline-3">
-<h3 id="orgd1411de"><span class="section-number-3">1.5.</span> 2024-03-22 08:41:13</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="orgd1411de"><span class="section-number-3">1.6.</span> 2024-03-22 08:41:13</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 项目类型:
 </p>
@@ -357,8 +372,8 @@ partial, 一部分。分部类 (课本第3页)
 </div>
 
 <div id="outline-container-org734686f" class="outline-3">
-<h3 id="org734686f"><span class="section-number-3">1.6.</span> 2024-03-19 09:32:31</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org734686f"><span class="section-number-3">1.7.</span> 2024-03-19 09:32:31</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 翻转字符串，添加循环和退出，并优化效率。
 </p>
@@ -404,8 +419,8 @@ partial, 一部分。分部类 (课本第3页)
 </div>
 
 <div id="outline-container-orge6b0bf6" class="outline-3">
-<h3 id="orge6b0bf6"><span class="section-number-3">1.7.</span> 2024-03-15 14:52:53</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orge6b0bf6"><span class="section-number-3">1.8.</span> 2024-03-15 14:52:53</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 Winform练习题:
 </p>
@@ -441,8 +456,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org5c8dc5d" class="outline-3">
-<h3 id="org5c8dc5d"><span class="section-number-3">1.8.</span> 2024-03-15 08:30:49</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org5c8dc5d"><span class="section-number-3">1.9.</span> 2024-03-15 08:30:49</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 翻转字符串，参考代码：
 </p>
@@ -526,8 +541,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org7f36afa" class="outline-3">
-<h3 id="org7f36afa"><span class="section-number-3">1.9.</span> 2024-03-12 09:46:16</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org7f36afa"><span class="section-number-3">1.10.</span> 2024-03-12 09:46:16</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 99乘法表，实际上跟倒三角的题目是一样的:
 </p>
@@ -539,8 +554,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org1ae34df" class="outline-3">
-<h3 id="org1ae34df"><span class="section-number-3">1.10.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="org1ae34df"><span class="section-number-3">1.11.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 要干啥:
 </p>
@@ -560,14 +575,14 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgac50150" class="outline-3">
-<h3 id="orgac50150"><span class="section-number-3">1.11.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="orgac50150"><span class="section-number-3">1.12.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-12">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="org13fe687">
+<figure id="orgaecab5a">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -583,8 +598,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgbf91dd6" class="outline-3">
-<h3 id="orgbf91dd6"><span class="section-number-3">1.12.</span> 2024-01-15 (期末分数)</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="orgbf91dd6"><span class="section-number-3">1.13.</span> 2024-01-15 (期末分数)</h3>
+<div class="outline-text-3" id="text-1-13">
 <table>
 
 
@@ -836,8 +851,8 @@ Winform练习题:
 
 
 <div id="outline-container-orgffdf4b0" class="outline-3">
-<h3 id="orgffdf4b0"><span class="section-number-3">1.13.</span> 2023-12-25 (任务)</h3>
-<div class="outline-text-3" id="text-1-13">
+<h3 id="orgffdf4b0"><span class="section-number-3">1.14.</span> 2023-12-25 (任务)</h3>
+<div class="outline-text-3" id="text-1-14">
 <p>
 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 </p>
@@ -845,8 +860,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org24277c6" class="outline-3">
-<h3 id="org24277c6"><span class="section-number-3">1.14.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-14">
+<h3 id="org24277c6"><span class="section-number-3">1.15.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-15">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -854,8 +869,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org92c67f3" class="outline-3">
-<h3 id="org92c67f3"><span class="section-number-3">1.15.</span> 2023-09-11 (任务)</h3>
-<div class="outline-text-3" id="text-1-15">
+<h3 id="org92c67f3"><span class="section-number-3">1.16.</span> 2023-09-11 (任务)</h3>
+<div class="outline-text-3" id="text-1-16">
 <p>
 创建 helloworld、编译、运行，独立完成
 </p>
