best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -83,6 +83,10 @@
 <li>按照课本第10页，练习登录窗体的实现</li>
 <li>完成课本上的课后题</li>
 </ol>
+
+<p>
+时间本不多，劝君珍惜之。有问题主动提问
+</p>
 </div>
 </div>
 
@@ -582,7 +586,7 @@ Winform练习题:
 </p>
 
 
-<figure id="orgaecab5a">
+<figure id="org3a2f1ea">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
