best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -22,20 +22,21 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org4a1e152">1.1. 2024-04-09 10:24:50</a></li>
-<li><a href="#org14d735d">1.2. 2024-04-03 09:26:26</a></li>
-<li><a href="#org25d14b5">1.3. 2024-04-02 10:54:48</a></li>
-<li><a href="#org30b5844">1.4. 2024-03-27 08:28:29</a></li>
-<li><a href="#org2e51549">1.5. 2024-03-26 10:36:40</a></li>
-<li><a href="#org7ebc4f2">1.6. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.7. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.8. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.9. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.10. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.11. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.12. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.13. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.14. 2023-09-06 (任务)</a></li>
+<li><a href="#org0ec5c7f">1.1. 2024-04-10 09:15:42</a></li>
+<li><a href="#org4a1e152">1.2. 2024-04-09 10:24:50</a></li>
+<li><a href="#org14d735d">1.3. 2024-04-03 09:26:26</a></li>
+<li><a href="#org25d14b5">1.4. 2024-04-02 10:54:48</a></li>
+<li><a href="#org30b5844">1.5. 2024-03-27 08:28:29</a></li>
+<li><a href="#org2e51549">1.6. 2024-03-26 10:36:40</a></li>
+<li><a href="#org7ebc4f2">1.7. 2024-03-20 14:58:37</a></li>
+<li><a href="#org30e98f4">1.8. 2024-03-19 10:49:19</a></li>
+<li><a href="#org2309290">1.9. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.10. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.11. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.12. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.13. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.14. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.15. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org366482f">2. 任务结果</a></li>
@@ -63,9 +64,18 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org4a1e152" class="outline-3">
-<h3 id="org4a1e152"><span class="section-number-3">1.1.</span> 2024-04-09 10:24:50</h3>
+<div id="outline-container-org0ec5c7f" class="outline-3">
+<h3 id="org0ec5c7f"><span class="section-number-3">1.1.</span> 2024-04-10 09:15:42</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+小测验，温度转换 + 猜数字。详情见课本 21 页。
+</p>
+</div>
+</div>
+
+<div id="outline-container-org4a1e152" class="outline-3">
+<h3 id="org4a1e152"><span class="section-number-3">1.2.</span> 2024-04-09 10:24:50</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 小测验，不规则的闹钟。详情见课本 22 页。
 </p>
@@ -73,8 +83,8 @@
 </div>
 
 <div id="outline-container-org14d735d" class="outline-3">
-<h3 id="org14d735d"><span class="section-number-3">1.2.</span> 2024-04-03 09:26:26</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org14d735d"><span class="section-number-3">1.3.</span> 2024-04-03 09:26:26</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 关于跳动的心，需要掌握:
 </p>
@@ -96,8 +106,8 @@
 </div>
 
 <div id="outline-container-org25d14b5" class="outline-3">
-<h3 id="org25d14b5"><span class="section-number-3">1.3.</span> 2024-04-02 10:54:48</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org25d14b5"><span class="section-number-3">1.4.</span> 2024-04-02 10:54:48</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 Tips:
 </p>
@@ -113,8 +123,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30b5844" class="outline-3">
-<h3 id="org30b5844"><span class="section-number-3">1.4.</span> 2024-03-27 08:28:29</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org30b5844"><span class="section-number-3">1.5.</span> 2024-03-27 08:28:29</h3>
+<div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li>练习上次的内容，搞会</li>
 <li>按照课本第10页，完成登录项目的编写</li>
@@ -124,8 +134,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2e51549" class="outline-3">
-<h3 id="org2e51549"><span class="section-number-3">1.5.</span> 2024-03-26 10:36:40</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org2e51549"><span class="section-number-3">1.6.</span> 2024-03-26 10:36:40</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 组件、控件、Control，在 C# 中，实际就是一个类的实例。
 </p>
@@ -181,8 +191,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.6.</span> 2024-03-20 14:58:37</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org7ebc4f2"><span class="section-number-3">1.7.</span> 2024-03-20 14:58:37</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 一个小挑战。
 </p>
@@ -200,8 +210,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.7.</span> 2024-03-19 10:49:19</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org30e98f4"><span class="section-number-3">1.8.</span> 2024-03-19 10:49:19</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
 </p>
@@ -293,8 +303,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.8.</span> 2024-03-13 08:31:23</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org2309290"><span class="section-number-3">1.9.</span> 2024-03-13 08:31:23</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 上课了
 </p>
@@ -408,8 +418,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 
 <div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.9.</span> 2024-03-12 11:07:40</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="orgd40edb2"><span class="section-number-3">1.10.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -425,8 +435,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.10.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.11.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -438,8 +448,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.11.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="orgdd2b753"><span class="section-number-3">1.12.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-12">
 <table>
 
 
@@ -859,8 +869,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.12.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="orgad105e2"><span class="section-number-3">1.13.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-13">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -868,8 +878,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.13.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-13">
+<h3 id="org64a4c8c"><span class="section-number-3">1.14.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-14">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -877,8 +887,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.14.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-14">
+<h3 id="org16fdc68"><span class="section-number-3">1.15.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-15">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -890,7 +900,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org77bf3af">
+<table id="org0e0ea6a">
 
 
 <colgroup>
@@ -899,12 +909,15 @@ C/S架构编程，做完第一章所有的上机题:
 <col  class="org-left">
 
 <col  class="org-right">
+
+<col  class="org-right">
 </colgroup>
 <thead>
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-right"><a href="#org4a1e152">2024-04-09</a></th>
+<th scope="col" class="org-right"><a href="#org0ec5c7f">2024-04-10</a></th>
 </tr>
 </thead>
 <tbody>
@@ -912,89 +925,153 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">4</td>
 <td class="org-left">李吉</td>
 <td class="org-right">1</td>
+<td class="org-right">1</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">许焕圣</td>
 <td class="org-right">2</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">何华为</td>
 <td class="org-right">3</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">韦金良</td>
 <td class="org-right">4</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">肖义珥</td>
 <td class="org-right">5</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">高旻昱</td>
 <td class="org-right">6</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">刘广鸿</td>
 <td class="org-right">7</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">段文潇</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
+<td class="org-right">2</td>
 </tr>
 
 <tr>
-<td class="org-right">5</td>
-<td class="org-left">黄飞超</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">古远东</td>
+<td class="org-right">4</td>
+<td class="org-left">贝俊霖</td>
+<td class="org-right">9</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">黄可彬</td>
+<td class="org-right">10</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-right">4</td>
-<td class="org-left">贝俊霖</td>
+<td class="org-right">3</td>
+<td class="org-left">李泽俊</td>
+<td class="org-right">11</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
-<td class="org-right">6</td>
-<td class="org-left">段京文</td>
+<td class="org-right">2</td>
+<td class="org-left">李耀武</td>
+<td class="org-right">12</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄飞超</td>
+<td class="org-right">13</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">古远东</td>
+<td class="org-right">14</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">唐景富</td>
+<td class="org-right">15</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">郭榕荣</td>
+<td class="org-right">16</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">陈颖聪</td>
+<td class="org-right">17</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">段京文</td>
+<td class="org-right">18</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">陆宇轩</td>
+<td class="org-right">19</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">刘虹佑</td>
+<td class="org-right">20</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">段文锋</td>
+<td class="org-right">21</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">岑法政</td>
+<td class="org-right">22</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1002,17 +1079,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">5</td>
 <td class="org-left">梁泽文</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">吴幸林</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">李泽俊</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1020,11 +1093,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">1</td>
 <td class="org-left">苏大明</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">陈梓鑫</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1032,11 +1107,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">4</td>
 <td class="org-left">叶宇</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">张甘霖</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1044,17 +1121,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">1</td>
 <td class="org-left">余海中</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">谭鑫</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">李耀武</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1062,11 +1135,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">2</td>
 <td class="org-left">麦天河</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">唐景富</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1074,11 +1142,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">4</td>
 <td class="org-left">王海波</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">陈颖聪</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1086,11 +1149,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">3</td>
 <td class="org-left">饶展源</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">谢晓中</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1098,23 +1163,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">1</td>
 <td class="org-left">沈艺宏</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">薛进超</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">段文锋</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">陆宇轩</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1122,11 +1177,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">1</td>
 <td class="org-left">刘翔</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">周永久</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1134,11 +1191,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">6</td>
 <td class="org-left">张桂毓</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">刘泽泉</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1146,11 +1205,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">1</td>
 <td class="org-left">李岳元</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">何晓东</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1158,11 +1219,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">4</td>
 <td class="org-left">卢德涛</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">岑法政</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
@@ -1171,7 +1227,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org0e0ea6a">
+<table id="orga587562">
 
 
 <colgroup>
