best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -900,7 +900,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org0e0ea6a">
+<table id="orga587562">
 
 
 <colgroup>
@@ -1076,6 +1076,20 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
+<td class="org-right">3</td>
+<td class="org-left">薛进超</td>
+<td class="org-right">23</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">谭鑫</td>
+<td class="org-right">24</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-right">5</td>
 <td class="org-left">梁泽文</td>
 <td class="org-right">&#xa0;</td>
@@ -1125,13 +1139,6 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">1</td>
-<td class="org-left">谭鑫</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">2</td>
 <td class="org-left">麦天河</td>
 <td class="org-right">&#xa0;</td>
@@ -1162,13 +1169,6 @@ C/S架构编程，做完第一章所有的上机题:
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">沈艺宏</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">薛进超</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1227,7 +1227,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="orga587562">
+<table id="orgc0e687b">
 
 
 <colgroup>
