best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -65,7 +65,7 @@
 </p>
 
 
-<figure id="orga19f73b">
+<figure id="orgca494b9">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -441,7 +441,7 @@
 </p>
 
 
-<figure id="org4886bc0">
+<figure id="org0b7cd6e">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1061,7 +1061,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org2f54368">
+<table id="orgc0e72d2">
 
 
 <colgroup>
@@ -1141,7 +1141,7 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">杨耀嘉</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">11</td>
 <td class="org-right">9</td>
 </tr>
 
@@ -1162,7 +1162,7 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">梁炽勇</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">10</td>
 <td class="org-right">12</td>
 </tr>
 
@@ -1300,6 +1300,13 @@ Winform 项目，VS 界面:
 </tr>
 
 <tr>
+<td class="org-right">3</td>
+<td class="org-left">邓炜祺</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">32</td>
+</tr>
+
+<tr>
 <td class="org-right">2</td>
 <td class="org-left">刘天宇</td>
 <td class="org-right">8</td>
@@ -1358,13 +1365,6 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">谢鹤鸣</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">邓炜祺</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1432,7 +1432,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="orgc0e72d2">
+<table id="org882b262">
 
 
 <colgroup>
