best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -65,7 +65,7 @@
 </p>
 
 
-<figure id="orgca494b9">
+<figure id="org1f81cae">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -441,7 +441,7 @@
 </p>
 
 
-<figure id="org0b7cd6e">
+<figure id="orgaf1871d">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1061,7 +1061,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="orgc0e72d2">
+<table id="org882b262">
 
 
 <colgroup>
@@ -1307,6 +1307,34 @@ Winform 项目，VS 界面:
 </tr>
 
 <tr>
+<td class="org-right">3</td>
+<td class="org-left">谢鹤鸣</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">33</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">左亮</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">34</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">韦代帅</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">35</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">程春平</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">36</td>
+</tr>
+
+<tr>
 <td class="org-right">2</td>
 <td class="org-left">刘天宇</td>
 <td class="org-right">8</td>
@@ -1336,21 +1364,7 @@ Winform 项目，VS 界面:
 
 <tr>
 <td class="org-right">1</td>
-<td class="org-left">程春平</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
 <td class="org-left">夏志豪</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">韦代帅</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1358,13 +1372,6 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">林显诚</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">谢鹤鸣</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1386,13 +1393,6 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">罗秀洋</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">左亮</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1432,7 +1432,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org882b262">
+<table id="org640ac8a">
 
 
 <colgroup>
